<resources>
    <string name="app_name">Safe &amp; Sound</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Safe &amp; Sound</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="or">Or</string>
    <string name="welcomeText">Welcome to\nSafe &amp; Sound</string>
    <string name="add">Add sensor</string>
    <string name="sensorType">Please select sensor type</string>
    <string name="sensorName">Please name the sensor</string>
    <string name="sensorModel">Please name the model of the sensor</string>
    <string name="pinNumbering">Please select the used pin numbering</string>
    <string name="sensorPinNumber">Please select the used pin number</string>
    <string name="sensorTopic">Please name the Topic</string>
    <string name="sensorPin1">Please define pin 1</string>
    <string name="sensorPin2">Please define pin 2</string>
</resources>
